# rust_everyday_practise

./: .gitignore  Cargo.toml
borrow_demo/src/: main.rs  nll.rs  nll_conflict.rs
docs/: lesson1.md  lesson11.md  lesson2.md  lesson3.md  lesson4.md
error_and_collections/: Cargo.toml
error_and_collections/src/: collections.rs
lesson1-borrow-basic/: Cargo.toml
lesson1-borrow-basic/src/: function_borrow.rs  immutable_borrow.rs  mutable_borrow.rs
lesson10-module/src/: greet.rs  main.rs
lesson11-stream-analyzer/: Cargo.toml
lesson11-stream-analyzer/src/: event.rs  main.rs
lesson12-option-map-and-then/: Cargo.toml  README.md
lesson12-option-map-and-then/src/: main.rs
lesson2-borrow-lifecycle/: Cargo.toml
lesson2-borrow-lifecycle/src/: borrow_rules.rs  main.rs  no_dangling.rs  reference_basics.rs
lesson3-struct-enum-option-result/: Cargo.toml
lesson3-struct-enum-option-result/src/: enum_basics.rs  main.rs  option_basics.rs  result_basics.rs  struct_basics.rs
lesson4-pattern_match/: Cargo.toml
lesson4-pattern_match/src/: if_let_basics.rs  main.rs  match_basics.rs  while_let_basics.rs
lesson5-trait/: Cargo.toml
lesson5-trait/src/: main.rs  models.rs  trait_bound.rs  traits.rs
lesson6-async/src/: main.rs
lesson6-error-and-collections/src/: error_basics.rs  main.rs
lesson7-async/: Cargo.toml
lesson7-async/src/: basics.rs
lesson7-closure/: Cargo.toml
lesson7-closure/src/: main.rs
lesson8-closure/src/: basics.rs
lesson8-iterator/: Cargo.toml
lesson8-iterator/src/: basics.rs  main.rs
lesson9-module/: Cargo.toml
(+4 files in other folders)
